<resources>
    <string name="theme_color">#3C4149</string>
    <string name="app_name">Car RGB App</string>
    <string name="txtRed">Red</string>
    <string name="txtGreen">Green</string>
    <string name="txtBlue">Blue</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_MAC_Arduino">MAC Bluetooth Arduino</string>
    <string name="pref_title_mac">MAC Address</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="title_activity_color_browsing">ColorBrowsingActivity</string>
    <string name="action_load_saved_colors">Load saved colors</string>
    <string name="action_remove_all">Delete all</string>
    <string name="errorSave">Could not save color</string>
    <string name="connected">Connected</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="saved">Saved!</string>
    <string name="shoulbBeConnected">You still should connected</string>
    <string name="notPairedConnected">Your device is probably not paired or connected</string>
    <string name="notPairedWrongMac">Your device is not yet paired or the MAC-address is wrong in the settings.</string>
    <string name="longPressToSave">Long press to save custom color</string>
    <string name="deleteAll">Delete all saved colors?</string>
    <string name="errorLoad">Could not load color</string>
    <string name="rgbColor">RGB Color:</string>
    <string name="rgbValues">rgb(%$d, %$d, %$d)</string>
    <string name="duplicate">You have this color already</string>
    <string name="pref_title_features">Features</string>
    <string name="pref_enable_hidden_features">Enable hidden features</string>
    <string name="pref_sw_features_on">Beta features are available, but can cause instability</string>
    <string name="pref_sw_featuren_off">Hides beta features that may be instable</string>
</resources>
